TINY-8980: tinymce-5 skin: fix extra padding on inline mode toolbar popup

--- a/modules/oxide/src/less/skins/ui/tinymce-5/skin.less
+++ b/modules/oxide/src/less/skins/ui/tinymce-5/skin.less
@@ -136,6 +136,9 @@
     padding: 0;
   }
 
+  // Distraction-free mode
+  .tox-pop .tox-pop__dialog .tox-toolbar { padding: 0; }
+
   // Add a top border when toolbar_location is bottom
   &:not(.tox-tinymce-inline) .tox-editor-header:not(:first-child) .tox-menubar {
     border-top: 1px solid @menubar-separator-color;
